--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
+title: Nicanor Carrasco-Vargas # the website title (if blank, full name will be used instead)
+first_name: Nicanor
+middle_name: Carrasco-Vargas
 last_name: Name
-email: you@example.com
+email: njcarrasco at mat.uc.cl
 description:  # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
