--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 title: Nicanor Carrasco-Vargas # the website title (if blank, full name will be used instead)
 first_name: Nicanor
 middle_name: Carrasco-Vargas
-last_name: Name
+last_name: 
 email: njcarrasco at mat.uc.cl
-description:  # the ">" symbol means to ignore newlines until "footer_text:"
+description:  Welcome to my personal webpage. # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
@@ -76,7 +76,7 @@ telegram_username: # your Telegram user name
 scholar_userid: # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
-orcid_id: # your ORCID ID
+orcid_id: 111 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
