--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -20,10 +20,9 @@
       year: 2020
 
 - title: Honors and Awards
-  type: list
+  type: time_table
   contents:
-    - year: 2018
-      items: 
-        - Premio universidad de Concepción
+    - title: Premio universidad de Concepción
+      year: 2018
 
 
