--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,7 +4,7 @@
     - name: Full Name
       value: Nicanor Carrasco-Vargas
     - name: Languages
-      value: Spanish, English (C1), French (Moderately low level, after 10 months in Toulouse, France)
+      value: Spanish (Native), English (C1), French (Moderate level from 10 months in Toulouse, France)
 
 - title: Education
   type: time_table
