--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Nicanor's personal page  # the website title (if blank, full name will be
 first_name: Nicanor
 middle_name: Carrasco-Vargas
 last_name: 
-email: njcarrasco at mat.uc.cl
+email: njcarrasco 🦠 mat.uc.cl
 description:  Welcome to my personal webpage. 
 footer_text:
 keywords:    # add your own keywords or leave empty
