--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -22,3 +22,5 @@
     - title: PhD in Mathematics 
       institution: Pontifical Catholic University of Chile 
       year: 2020 - 2024
+      description: 
+          - Supervised by Cristóbal Rojas and Sebastián Barbieri
