--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 title: Nicanor's personal page  # the website title (if blank, full name will be used instead)
 first_name: Nicanor
-middle_name: Carrasco-Vargas
-last_name: 
+middle_name: 
+last_name: Carrasco-Vargas
 email: njcarrasco 🦠 mat.uc.cl
 description:  Welcome to my personal webpage. 
 footer_text:
