--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,12 +1,10 @@
 - title: General Information
-  type: map
+  type: list
   contents:
-    - name: Full Name
-      value: Nicanor Carrasco-Vargas
-    - name: Academic website
-      value: <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
-    - name: Orcid
-      value: <a href="https://orcid.org/0009-0002-7381-4382/print">orcid.org/0009-0002-7381-4382/</a>
+    - <u> Full Name </u>: Nicanor Carrasco-Vargas
+    - <u> Academic website </u>: <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
+    - <u> Orcid </u>: <a href="https://orcid.org/0009-0002-7381-4382/print">orcid.org/0009-0002-7381-4382/</a> 
+
 
 - title: Education
   type: time_table
