--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,6 +1,6 @@
 - title: General Information
   type: list
-  contents:
+  items:
     - Full Name: Nicanor Carrasco-Vargas
     - Academic website: <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
     - Orcid: <a href="https://orcid.org/0009-0002-7381-4382/print">orcid.org/0009-0002-7381-4382/</a> 
