--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,5 +1,5 @@
 - title: General Information
-  type: nested_list
+  type: time_table
   contents:
     - title: Full Name Nicanor Carrasco-Vargas 
     - title: Academic website <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
