--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,12 +1,12 @@
 - title: General Information
-  type: time_table
+  type: map
   contents:
-    - title: Full Name Nicanor Carrasco-Vargas 
-      year: 1
-    - title: Academic website <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
-      year: 2
-    - title: Orcid <a href="https://orcid.org/0009-0002-7381-4382/print">orcid.org/0009-0002-7381-4382/</a>
-      year: 3
+    - title: Full Name
+      value: Nicanor Carrasco-Vargas 
+    - title: Academic website
+      value: <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
+    - title: Orcid 
+      value: <a href="https://orcid.org/0009-0002-7381-4382/print">orcid.org/0009-0002-7381-4382/</a>
 - title: Education
   type: nested_list
   contents:
