--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,11 +1,11 @@
 - title: General Information
   type: map
   contents:
-    - title: Full Name
+    - name: Full Name
       value: Nicanor Carrasco-Vargas 
-    - title: Academic website
+    - name: Academic website
       value: <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
-    - title: Orcid 
+    - name: Orcid 
       value: <a href="https://orcid.org/0009-0002-7381-4382/print">orcid.org/0009-0002-7381-4382/</a>
 - title: Education
   type: nested_list
