--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Nicanor's personal page  # the website title (if blank, full name will be used instead)
+title: Nicanor's academic webpage # the website title (if blank, full name will be used instead)
 first_name: Nicanor
 middle_name: 
 last_name: Carrasco-Vargas
 email: njcarrasco 🦠 mat.uc.cl
-description:  Welcome to my personal webpage. 
+description:   
 footer_text:
 keywords:    # add your own keywords or leave empty
 
