--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ first_name: Nicanor
 middle_name: 
 last_name: Carrasco-Vargas
 email: njcarrasco 🦠 mat.uc.cl
-description:   
-footer_text:
+description: #  
+footer_text: This website uses the theme [al-folio](https://github.com/alshedivat/al-folio)
 keywords:    # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
