--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Nicanor's academic website # the website title (if blank, full name will 
 first_name: Nicanor
 middle_name: 
 last_name: Carrasco-Vargas
-email: njcarrasco 🦠 mat.uc.cl
+email: nicanor.vargas 🦠 uj.edu.pl
 description: #  
 footer_text: This website uses the theme [al-folio](https://github.com/alshedivat/al-folio)
 keywords:    # add your own keywords or leave empty
