--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,9 +1,9 @@
 - title: General Information
   type: time_table
   contents:
-    - title: Full Name: Nicanor Carrasco-Vargas 
-    - title: Academic website: <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
-    - title: Orcid: <a href="https://orcid.org/0009-0002-7381-4382/print">orcid.org/0009-0002-7381-4382/</a>
+    - title: Full Nam: Nicanor Carrasco-Vargas 
+    - title: Academic website <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
+    - title: Orcid <a href="https://orcid.org/0009-0002-7381-4382/print">orcid.org/0009-0002-7381-4382/</a>
     
 - title: Education
   type: time_table
