--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,7 +3,7 @@
   contents:
     - title: <b>Name:</b> Nicanor Carrasco-Vargas 
     - title: <b>Affiliation:</b> Jagiellonian University, Poland.
-    - title: <b>Contact:</b> nicanor.vargas@uj.edu.pl
+    - title: <b>Contact:</b> nicanor.vargas 📧 uj.edu.pl
     - title: <b>Academic website:</b> <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
     - title: <b>Orcid:</b> <a href="https://orcid.org/0009-0002-7381-4382/print">orcid.org/0009-0002-7381-4382/</a>
 
