--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,7 +1,7 @@
 - title: General Information
   type: nested_list
   contents:
-    - title: <b>Name:</b> Nicanor Carrasco-Vargas 
+    - title: <b>Name:</b><i> Nicanor Carrasco-Vargas</i>
     - title: <b>Affiliation:</b> Jagiellonian University, Poland.
     - title: <b>Contact:</b> nicanor.vargas 📧 uj.edu.pl
     - title: <b>Academic website:</b> <a href="https://nicanorcarrascovargas.github.io">nicanorcarrascovargas.github.io</a>
