--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Nicanor's academic website # the website title (if blank, full name will be used instead)
+title: Nicanor Carrasco-Vargas # the website title (if blank, full name will be used instead)
 first_name: Nicanor
 middle_name: 
 last_name: Carrasco-Vargas
