--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Carrasco-Vargas
 email: nicanor.vargas 🦠 uj.edu.pl
 description: #  
-footer_text: This website uses the theme [al-folio](https://github.com/alshedivat/al-folio)
+footer_text: Created with [al-folio](https://github.com/alshedivat/al-folio)
 keywords:    # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
