--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ title: Nicanor Carrasco-Vargas # the website title (if blank, full name will be 
 first_name: Nicanor
 middle_name: 
 last_name: Carrasco-Vargas
-email: 
+email: nicanor.vargas 🦠 uj.edu.pl
 description: #  
-footer_text: Contact: nicanor.vargas 🦠 uj.edu.pl. Created with [al-folio](https://github.com/alshedivat/al-folio)
+footer_text: Contact: nicanor.vargas🦠uj.edu.pl. Website theme: <a href="https://github.com/alshedivat/al-folio">al-folio</a>.
 keywords:    # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
