--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Carrasco-Vargas
 email: nicanor.vargas🦠uj.edu.pl
 description: #  
-footer_text:  nicanor.vargas at uj.edu.pl 
+footer_text:  Website theme: al-folio 
 keywords:    # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
@@ -99,7 +99,7 @@ discord_id: # your discord id (18-digit unique numerical identifier)
 zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
-contact_note: contact note 
+contact_note: Contact: nicanor.vargas at uj.edu.pl
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
