--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Nicanor Carrasco-Vargas # the website title (if blank, full name will be 
 first_name: Nicanor
 middle_name: 
 last_name: Carrasco-Vargas
-email: nicanor.vargas🦠uj.edu.pl
+email: nicanor.vargas uj.edu.pl
 description: #  
 footer_text:  Website theme: al-folio 
 keywords:    # add your own keywords or leave empty
