--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Nicanor Carrasco-Vargas # the website title (if blank, full name will be 
 first_name: Nicanor
 middle_name: 
 last_name: Carrasco-Vargas
-email: nicanor.vargas uj.edu.pl
+email: nicanor.vargas ? uj.edu.pl
 description: #  
 footer_text:  Website theme: al-folio 
 keywords:    # add your own keywords or leave empty
@@ -99,7 +99,7 @@ discord_id: # your discord id (18-digit unique numerical identifier)
 zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
-contact_note: Contact: nicanor.vargas at uj.edu.pl
+contact_note: Contact: nicanor.vargas ? uj.edu.pl
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
