--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Carrasco-Vargas
 email: nicanor.vargas ? uj.edu.pl
 description: #  
-footer_text:  Website theme: al-folio 
+footer_text:  Website theme al-folio 
 keywords:    # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
