--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,9 @@ middle_name:
 last_name: Carrasco-Vargas
 email: nicanor.vargas ? uj.edu.pl
 description: #  
-footer_text: Website theme al-folio 
+footer_text: Website theme: al-folio 
 keywords:    # add your own keywords or leave empty
+contact_note: Contact: nicanor.vargas ? uj.edu.pl
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚗️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -99,7 +100,6 @@ discord_id: # your discord id (18-digit unique numerical identifier)
 zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
-contact_note: Contact nicanor.vargas ? uj.edu.pl
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
