--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ middle_name:
 last_name: Carrasco-Vargas
 email: nicanor.vargas ? uj.edu.pl
 description: #  
-footer_text: Website theme: al-folio 
+footer_text: "Website theme: al-folio" 
 keywords:    # add your own keywords or leave empty
-contact_note: Contact: nicanor.vargas ? uj.edu.pl
+contact_note: "Contact: nicanor.vargas ? uj.edu.pl"
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚗️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
